Fix check